# s2geometry

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  Config.cmake.in  README.md  WORKSPACE  flaky_tests.txt  pyproject.toml  rename_dynamic_annotations.sh  setup.cfg  setup.py
src/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  Makefile.am  README.md  configure.ac  fpcontractoff.h  priority_queue_sequence.h  priority_queue_sequence_test.cc  r1interval.h  r1interval_test.cc  r2.h  r2rect.cc  r2rect.h  r2rect_test.cc  s1angle.cc  s1angle.h  s1angle_test.cc  s1chordangle.cc  s1chordangle.h  s1chordangle_test.cc  s1interval.cc  s1interval.h  s1interval_test.cc  s2.cc  s2.h  s2.swig  s2_test.cc  s2cap.cc  s2cap.h  s2cap_test.cc  s2cell.cc  s2cell.h  s2cell_test.cc  s2cellid.cc  s2cellid.h  s2cellid_test.cc  s2cellunion.cc  s2cellunion.h  (+76 more)
src/base/: atomicops.h  casts.h  int128.cc  int128.h  integral_types.h  macros.h  mutex.h  port.h  port_hash.h  scoped_ptr.h  scoped_ptr_internals.h  spinlock.h  stl_decl_msvc.h  stringprintf.cc  stringprintf.h  strtoint.cc  strtoint.h  template_util.h  type_traits.h
src/gtest/include/gtest/: gtest-death-test.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h  gtest_prod.h
src/gtest/src/: gtest-all.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc
src/python/: BUILD.bazel  CMakeLists.txt  PYBIND_README.md  README.md  __init__.py  coder.i  module.cc  pywraps2_test.py  r1interval_bindings.cc  r1interval_test.py  r2point_bindings.cc  r2point_test.py  r2rect_bindings.cc  r2rect_test.py  s1angle_bindings.cc  s1angle_test.py  s1chord_angle_bindings.cc  s1chord_angle_test.py  s1interval_bindings.cc  s1interval_test.py  s2.i  s2_common.i  s2cap_bindings.cc  s2cap_test.py  s2cell_bindings.cc  s2cell_id_bindings.cc  s2cell_id_range.cc  s2cell_id_range.h  s2cell_id_range_test.cc  s2cell_id_test.py  s2cell_test.py  s2geometry_test.py  s2latlng_bindings.cc  s2latlng_rect_bindings.cc  s2latlng_rect_test.py  s2latlng_test.py  s2point_bindings.cc  s2point_test.py  setup.py
src/python/bindings/: BUILD.bazel  s2point_bindings.cc
src/python/s2geometry_pybind/: __init__.py
src/python/tests/: BUILD.bazel  s2point_test.py
src/s2/: BUILD  _fp_contract_off.h  _fpcontractoff.h  encoded_s2cell_id_vector.cc  encoded_s2cell_id_vector.h  encoded_s2cell_id_vector_test.cc  encoded_s2point_vector.cc  encoded_s2point_vector.h  encoded_s2point_vector_test.cc  encoded_s2shape_index.cc  encoded_s2shape_index.h  encoded_s2shape_index_test.cc  encoded_string_vector.cc  encoded_string_vector.h  encoded_string_vector_test.cc  encoded_uint_vector.h  encoded_uint_vector_test.cc  fpcontractoff.h  gmock_matchers.cc  gmock_matchers.h  gmock_matchers_test.cc  id_set_lexicon.cc  id_set_lexicon.h  id_set_lexicon_test.cc  mutable_s2shape_index.cc  mutable_s2shape_index.h  mutable_s2shape_index_test.cc  mutable_s2shapeindex.cc  mutable_s2shapeindex.h  mutable_s2shapeindex_test.cc  priority_queue_sequence.h  priority_queue_sequence_test.cc  pywraps2_test.py  r1interval.h  r1interval_test.cc  r2.h  r2rect.cc  r2rect.h  r2rect_test.cc  s1angle.cc  (+429 more)
src/s2/base/: BUILD  BUILD.bazel  atomicops.h  casts.h  commandlineflags.h  commandlineflags_declare.h  int128.cc  int128.h  integral_types.h  log_severity.h  logging.h  macros.h  malloc_extension.cc  malloc_extension.h  mutex.h  port.h  port_hash.h  spinlock.h  stringprintf.cc  stringprintf.h  strtoint.cc  strtoint.h  sysinfo.cc  sysinfo.h  template_util.h  timer.h  type_traits.h  types.h
src/s2/internal/: BUILD  s2disjoint_set.h  s2disjoint_set_test.cc  s2incident_edge_tracker.cc  s2incident_edge_tracker.h  s2index_cell_data.cc  s2index_cell_data.h  s2index_cell_data_test.cc  s2meta.h
src/s2/strings/: ascii_ctype.cc  ascii_ctype.h  join.h  ostringstream.cc  ostringstream.h  serialize.cc  serialize.h  split.cc  split.h
src/s2/testing/: BUILD  BUILD.bazel  gtest_prod.h  test_main.cc
src/s2/util/bitmap/: BUILD  BUILD.bazel  bitmap.h
src/s2/util/bits/: BUILD  BUILD.bazel  bit-interleave.cc  bit-interleave.h  bits-internal-windows.h  bits.cc  bits.h
src/s2/util/btree/: btree.h  btree_container.h  btree_map.h  btree_set.h
src/s2/util/coding/: BUILD  BUILD.bazel  coder.cc  coder.h  nth-derivative.h  transforms.h  varint.cc  varint.h
src/s2/util/endian/: BUILD  BUILD.bazel  endian.h
src/s2/util/gtl/: BUILD  BUILD.bazel  btree.h  btree_container.h  btree_map.h  btree_set.h  compact_array.h  container_logging.h  dense_hash_set.h  densehashtable.h  fixedarray.h  gtl_namespace.h  hashtable_common.h  inlined_vector.h  layout.h  (+10 more)
src/strings/: ascii_ctype.cc  ascii_ctype.h  case.cc  case.h  charset.cc  charset.h  escaping.cc  escaping.h  fastmem.h  join.cc  join.h  join_internal.h  memutil.cc  memutil.h  numbers.cc  numbers.h  serialize.cc  serialize.h  split.cc  split.h  split_internal.h  strcat.cc  strcat.h  stringpiece.cc  stringpiece.h  stringpiece_utils.cc  stringpiece_utils.h  strip.cc  strip.h  util.cc  util.h
src/util/bits/: bit-interleave.cc  bit-interleave.h  bits-internal-unknown.h  bits-internal-windows.h  bits.cc  bits.h
src/util/btree/: btree.h  btree_container.h  btree_map.h  btree_set.h
src/util/coding/: coder.cc  coder.h  nth-derivative.h  transforms.h  varint.cc  varint.h
src/util/endian/: endian.h
src/util/gtl/: algorithm.h  charmap.h  container_logging.h  fixedarray.h  gtl_namespace.h  inlined_vector.h  manual_constructor.h  ptr_util.h  stl_util.h
src/util/hash/: builtin_type_hash.h  city.cc  city.h  farmhash.h  hash.cc  hash.h  hash128to64.h  jenkins.cc  jenkins.h  jenkins_lookup2.h  mix.h  murmur.cc  murmur.h  murmur_large_test.cc  murmur_test.cc  string_hash.h
src/util/math/: mathlimits.cc  mathlimits.h  mathutil.cc  mathutil.h  matrix3x3.h  vector2.h  vector3.h  vector3_hash.h  vector4.h
src/util/units/: length-units.cc  length-units.h  physical-units.h
(+113 files in other folders)
